做了一点点修改

--- a/conf/facebook.conf
+++ b/conf/facebook.conf
@@ -1,6 +1,6 @@
 address=/static.ak.facebook.com/84.53.175.138
 address=/fbcdn-photos-f-a.akamaihd.net/204.0.5.18
-address=/fbcdn-photos-b-a.akamaihd.net/fbcdn-photos-e-a.akamaihd.net/fbcdn-photos-g-a.akamaihd.net/fbcdn-photos-h-a.akamaihd.net/fbcdn-photos-a-a.akamaihd.net/fbcdn-photos-c-a.akamaihd.net/fbcdn-photos-d-a.akamaihd.net/84.53.175.138
+address=/.akamaihd.net/84.53.175.138
 address=/fbexternal-a.akamaihd.net/204.0.5.26
 address=/0-channel-proxy-13-prn1.facebook.com/channel-proxy-13-prn1.facebook.com/69.171.235.19
 address=/scontent-b.xx.fbcdn.net/scontent-a.xx.fbcdn.net/31.13.73.56
