合并所有的2mdn
2mdn.net is a domain owned by Google that is used for loading ad
content for DoubleClick from the Google CDN.

--- a/conf/adblock.conf
+++ b/conf/adblock.conf
@@ -4,17 +4,7 @@ address=/afd.l.google.com/127.0.0.1
 address=/pagead-tpc.l.google.com/127.0.0.1
 address=/partnerad.l.google.com/127.0.0.1
 address=/www.googletagservices.com/127.0.0.1
-address=/affiliate.2mdn.net/127.0.0.1
-address=/m.de.2mdn.net/127.0.0.1
-address=/m.fr.2mdn.net/127.0.0.1
-address=/m.uk.2mdn.net/127.0.0.1
-address=/m1.2mdn.net/127.0.0.1
-address=/m1.au.2mdn.net/127.0.0.1
-address=/m1.emea.2mdn.net/127.0.0.1
-address=/m3.2mdn.net/127.0.0.1
-address=/rmcdn.2mdn.net/127.0.0.1
-address=/rmcdn.f.2mdn.net/127.0.0.1
-address=/s1.2mdn.net/127.0.0.1
+address=/2mdn.net/127.0.0.1
 address=/cc-dt.com/127.0.0.1
 address=/ads.cc-dt.com/127.0.0.1
 address=/clickserve.cc-dt.com/127.0.0.1
