--- a/conf/twitter.conf
+++ b/conf/twitter.conf
@@ -1,3 +1,5 @@
-address=/twitter.com/198.98.52.15
-address=/t.co/199.59.148.12
-address=/twimg.com/199.96.57.7
+address=/twitter.com/199.16.158.8
+address=/api.twitter.com/199.16.158.9
+address=/t.co/199.16.158.12
+address=/twimg.com/199.96.57.17
+address=/tinypic.com/96.127.160.130
