--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
     "package_id"      : "com.modouwifi.hdns",
-    "name"            : "科学上网",
+    "name"            : "自定义DNS",
     "author"          : "魔豆路由器",
     "author_mail"     : "rd@mochui.net",
     "homepage"        : "www.modouwifi.com",
-    "version"         : "0.4.4",
+    "version"         : "0.4.5",
     "os_version"      : "0.5.28",
-    "release_date"    : "2014.08.18",
+    "release_date"    : "2014.09.12",
     "icon"            : "./res/icon_111X111.png",
     "location"        : "internal",
-    "description"     : "科学上网"
+    "description"     : "自定义DNS"
 }
